<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="danieljuric.borgwarner.MainActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />


    <TextView
        android:text="@string/main_text_Code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_code"
        android:layout_below="@id/include"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textAlignment="textStart" />

    <TextView
        android:text="@string/main_code_encoded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_code_encoded"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/main_button_encode"
        android:layout_toEndOf="@+id/main_text_EngRevLvl"
        android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_copyright"
        android:fontFamily="sans-serif"
        android:id="@+id/main_text_copyright"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/main_text_Code_Type" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_above="@+id/main_text_copyright"
        android:visibility="visible"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>

    <Button
        android:text="@string/main_button_scan"
        android:id="@+id/main_button_encode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/adView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_height="wrap_content"
        android:id="@+id/main_code_string"
        android:textAlignment="viewEnd"
        android:layout_width="300dp"
        android:layout_alignBaseline="@+id/main_text_code"
        android:layout_alignBottom="@+id/main_text_code"
        android:layout_alignStart="@+id/main_code_inventoryOfMachine_string" />

    <TextView
        android:text="@string/main_text_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_plant"
        android:textAlignment="textStart"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/main_text_code"
        android:layout_alignStart="@+id/main_text_code" />

    <TextView
        android:text="@string/main_text_Code_Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_Code_Type"
        android:textAlignment="textStart"
        android:layout_below="@+id/main_text_code"
        android:layout_alignStart="@+id/main_text_code" />

    <TextView
        android:text="@string/main_text_inventoryOfMachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_inventoryOfMachine"
        android:textAlignment="textStart"
        android:layout_below="@+id/main_text_plant"
        android:layout_alignStart="@+id/main_text_plant" />

    <TextView
        android:text="@string/main_text_bwPartNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_bwPartNo"
        android:textAlignment="textStart"
        android:layout_below="@+id/main_text_inventoryOfMachine"
        android:layout_alignEnd="@+id/main_text_copyright" />

    <TextView
        android:text="@string/main_text_EngRevLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_EngRevLvl"
        android:textAlignment="textStart"
        android:layout_below="@+id/main_text_bwPartNo"
        android:layout_alignStart="@+id/main_text_inventoryOfMachine" />

    <TextView
        android:text="@string/main_text_julianDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_julianDate"
        android:textAlignment="textStart"
        android:layout_below="@+id/main_text_EngRevLvl"
        android:layout_alignStart="@+id/main_text_bwPartNo" />

    <TextView
        android:text="@string/main_text_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text_counter"
        android:textAlignment="textStart"
        android:layout_below="@+id/main_text_julianDate"
        android:layout_alignStart="@+id/main_text_EngRevLvl" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:id="@+id/main_code_type_string"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/main_code_string"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/main_code_plant_string"
        android:textAlignment="viewEnd"
        android:layout_above="@+id/main_text_inventoryOfMachine"
        android:layout_alignStart="@+id/main_code_type_string" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:id="@+id/main_code_inventoryOfMachine_string"
        android:textAlignment="viewEnd"
        android:layout_alignBaseline="@+id/main_text_inventoryOfMachine"
        android:layout_alignBottom="@+id/main_text_inventoryOfMachine"
        android:layout_alignStart="@+id/main_code_plant_string" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/main_code_bwPartNo_string"
        android:textAlignment="viewEnd"
        android:layout_alignBaseline="@+id/main_text_bwPartNo"
        android:layout_alignBottom="@+id/main_text_bwPartNo"
        android:layout_alignStart="@+id/main_code_inventoryOfMachine_string" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/main_code_EngRevLvl_string"
        android:textAlignment="viewEnd"
        android:layout_alignBaseline="@+id/main_text_EngRevLvl"
        android:layout_alignBottom="@+id/main_text_EngRevLvl"
        android:layout_alignStart="@+id/main_code_bwPartNo_string" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:id="@+id/main_code_julianDate_string"

        android:layout_height="8pt"
        android:textAlignment="viewEnd"
        android:layout_alignBottom="@+id/main_text_julianDate"
        android:layout_alignStart="@+id/main_code_EngRevLvl_string" />

    <TextView
        android:text="@string/universal_undefined"
        android:layout_width="300dp"
        android:id="@+id/main_code_counter_string"
        android:textAlignment="viewEnd"
        android:layout_height="wrap_content"

        android:layout_below="@+id/main_code_julianDate_string"
        android:layout_alignStart="@+id/main_code_julianDate_string" />

    <Switch
        android:text="@string/main_switch_translateToLang"
        android:layout_height="5dp"
        android:id="@+id/main_switch_translateToLang"
        android:checked="false"
        android:splitTrack="false"
        android:layout_width="wrap_content"
        android:layout_above="@+id/main_code_encoded"
        android:layout_alignEnd="@+id/main_code_encoded"
        android:layout_marginBottom="14dp" />
</RelativeLayout>
